file upload added with userId completed
